fix: don’t overlap with personal links

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -23,6 +23,7 @@
   }
 
   #search p {
+    height: .8em;
     margin: 0;
     float: right;
   }
